[gd_scene load_steps=5 format=3 uid="uid://cl4nn7030g5wq"]

[ext_resource type="Texture2D" uid="uid://13tomh00mxl3" path="res://Scenes/tempStartMenu.png" id="1_1ydhs"]
[ext_resource type="Script" uid="uid://0x2t4bo604e" path="res://Scripts/startButton.gd" id="1_gqihx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rr6mw"]
texture = ExtResource("1_1ydhs")
modulate_color = Color(0.83033526, 0.83033514, 0.83033514, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ydhs"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.4117647)
shadow_size = 4

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = 1.0
offset_right = -10.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rr6mw")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 292.0
offset_right = 655.2523
offset_bottom = 369.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_1ydhs")
text = "Start
"
script = ExtResource("1_gqihx")

[node name="Versionlog" type="Button" parent="."]
layout_mode = 0
offset_left = 854.0
offset_top = 20.0
offset_right = 1144.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_1ydhs")
text = "VersionLog
"
script = ExtResource("1_gqihx")

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 890.0
offset_top = 109.0
offset_right = 1117.0
offset_bottom = 178.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_1ydhs")
text = "Credits
"
script = ExtResource("1_gqihx")

[connection signal="pressed" from="StartButton" to="StartButton" method="_on_pressed"]
[connection signal="pressed" from="Versionlog" to="StartButton" method="_on_versionlog_pressed"]
[connection signal="pressed" from="CreditsButton" to="StartButton" method="_on_credits_button_pressed"]
